--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^12.20.1",
+    "@studio-freight/lenis": "^1.0.42",
+    "aos": "^2.3.4",
+    "framer-motion": "^12.23.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.3",
     "react-slick": "^0.30.3",
+    "sass": "^1.89.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
